# epidemics-suppression

./: .gitignore  Contact tracing simulations - Nicer version with debugging.ipynb  LICENSE.txt  Pipfile  README.md  R_suppression_calculations.ipynb  pyproject.toml  setup.py
epidemic_suppression_algorithms/: evolution_with_app_algorithm.py  free_evolution_algorithm.py  homogeneous_evolution_algorithm.py
examples/: R_suppression_examples.py  dependency_on_epidemic_data_examples.py  dependency_on_isolation_measures_parameters_examples.py  dependency_on_parameters_examples.py  epidemic_data_examples.py  free_evolution_examples.py  homogeneous_scenario_evolution_examples.py  plotting_utils.py  reproduction_number_time_evolution_span_parameters.py  scenario_with_app_evolution_examples.py  time_evolution_examples.py
math_utilities/: config.py  discrete_distributions_utils.py  general_utilities.py
model_utilities/: epidemic_data.py  scenarios.py
notebooks/: OLD -- Contact tracing simulations - Nicer version with debugging.ipynb  R_suppression_calculations.ipynb
scripts/: R_suppression_examples.py  convolution_example.py  incubation.py  prove.py  r0.py  r0_suppression.py  r_evolution.py  r_evolution_homogeneous.py  r_evolution_homogeneous_with_asymptomatics.py  r_evolution_two_components.py  r_evolution_with_asymptomatics.py  reproduction_number_time_evolution.py  reproduction_number_time_evolution_span_parameters.py
tests/: corner_cases_test.py  model_blocks_test.py  nu_tausigma_computation_test.py  scenario_test.py  utils_test.py
utilities/: distributions.py  (+6 more)
(+69 files in other folders)
