[tool.poetry]
name = "epidemics-suppression"
version = "0.1.0"
description = ""
authors = ["Andrea Maiorana, Marco Meneghelli"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "3.3.4"
scipy = "1.6.1"

[tool.poetry.dev-dependencies]
black = "==19.10b0"
isort = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
